# freedesktop-desktop-entry

./: Cargo.toml  NOTE.md  README.md  REQUEST_TOKEN.md
examples/: all_files.rs  bench.rs  de_launch.rs  de_list.rs  example.rs  find_appid.rs  launch.rs  specific_file.rs
src/: decoder.rs  desktop_entry.rs  exec.rs  generic_entry.rs  iter.rs  lib.rs  matching.rs  mime_apps.rs  owned.rs  test.rs  tests.rs  thumbnail.rs
src/exec/: dbus.rs  error.rs  graphics.rs  mod.rs
tests/: com.brave.Browser.flextop.brave-cinhimbnkkaeohfgghhklpknlkffjgod-Default.desktop  org.kde.krita.desktop  org.mozilla.firefox.desktop
tests/entries/: empty-exec.desktop  non-terminal-cmd.desktop  terminal-cmd.desktop  unmatched-quotes.desktop
tests_entries/: bad.mimeapps.list  code.desktop  com.system76.CosmicPlayer.thumbnailer  generic.entry  mimeapps.list  org.gnome.Nautilus.desktop  org.gnome.SystemMonitor.desktop  org.mozilla.firefox.desktop
tests_entries/exec/: non-terminal-cmd.desktop  unmatched-quotes.desktop
