[package]
name = "freedesktop-desktop-entry"
version = "0.7.5"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2021"
repository = "https://github.com/pop-os/freedesktop-desktop-entry"
description = "Freedesktop Desktop Entry Specification"
license = "MPL-2.0"
readme = "README.md"
categories = [ "os::unix-apis" ]
keywords = [ "freedesktop", "desktop", "entry" ]

[dependencies]
dirs = "5.0.1"
gettext-rs = { version = "0.7", features = ["gettext-system"]}
memchr = "2"
textdistance = "1.0.2"
strsim = "0.11.1"
thiserror = "1"
xdg = "2.4.0"
log = "0.4.21"

