[package]
name = "freedesktop-desktop-entry"
version = "0.7.19"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2021"
repository = "https://github.com/pop-os/freedesktop-desktop-entry"
description = "Freedesktop Desktop Entry Specification"
license = "MPL-2.0"
readme = "README.md"
categories = ["os::unix-apis"]
keywords = ["freedesktop", "desktop", "entry"]

[features]
default = ["gettext"]
gettext = ["dep:gettext-rs"]

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"], optional = true }
memchr = "2"
thiserror = "2"
xdg = "3"
log = "0.4"
unicase = "2.8.1"
bstr = "1.12.0"

[dev-dependencies]
tempfile = "3"
